# rust-orm-template

./: .env.example  Cargo.toml  docker-compose.yaml  readme.md
src/: lib.rs  main.rs
src/connector/db/: migration.rs  mod.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
src/migrator/: m20220602_000001_create_bakery_table.rs  m20220602_000002_create_chef_table.rs  mod.rs
