# [workspace]
# members = ["crates/*"]

[package]
name = "rust_orm_template"
version = "0.1.0"
edition = "2021"
default-run = "rust_orm_template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock" ] }
sea-orm-migration = "0.11.3"
sea-orm-cli = "0.11.3"

[dev-dependencies]
temp-env = "0.3.4"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]